--- a/helm/install/templates/manager.yaml
+++ b/helm/install/templates/manager.yaml
@@ -49,3 +49,5 @@ spec:
           capabilities: { drop: [ALL] }
           readOnlyRootFilesystem: true
           runAsNonRoot: true
+          seccompProfile:
+            type: RuntimeDefault
